# ducking-robot

./: .gitignore  CMakeLists.txt  README.md  UserManual.tex
assets/: CMakeLists.txt
assets/images/: alpha.tga  boat-sheet.tga  boat.tga  enemy-sheet.tga  water.tga
fase1/: entrada
game/: Boat.c  Boat.h  CMakeLists.txt  Doxyfile.in  Enemy.c  Enemy.h  Ent.c  Ent.h  VisibleEnt.c  VisibleEnt.h  assets.c  assets.h  assets.h.gch  ent_base.c  ent_base.h  ent_table.c  ent_table.h  entity.c  entity.h  events.c  events.h  game_time.c  game_time.h  hash_fnv1a.c  hash_fnv1a.h  list.c  list.h  main.c  obj_defs.h  pause.c  pause.h  utils.c  utils.h  vec2.h  video.c  video.h
src/: list.c  list.h
src/fase1/: entrada  entrada.c  in.txt
